--- a/index.html
+++ b/index.html
@@ -1,135 +1,122 @@
 <!doctype html>
 <html lang="pl">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>FreeFlow — Voice to order</title>
-<meta name="theme-color" content="#0b0f12" />
+<meta name="theme-color" content="#0b0f12">
+<!-- WCZEŚNIE ZDEFINIOWANE FALLBACKI (gdyby główny skrypt nie ruszył) -->
+<script>
+  window.FF_VER = 'v7';
+  window.FF_state = { listening:false };
+  window.FF_toggleMenu = function(ev){
+    try{
+      ev && ev.stopPropagation();
+      var p = document.getElementById('menuPanel');
+      if(!p) return;
+      p.style.display = (p.style.display==='block') ? 'none' : 'block';
+    }catch(e){}
+  };
+  window.FF_toggleMic = function(){
+    try{
+      // natychmiastowy feedback
+      try{ navigator.vibrate && navigator.vibrate(30); }catch(e){}
+      var btn = document.getElementById('micBtn');
+      var hint= document.getElementById('micHint');
+      var ledH= document.getElementById('ledHint');
+      var ledB= document.getElementById('ledBar');
+      window.FF_state.listening = !window.FF_state.listening;
+      if(btn) btn.classList.toggle('recording', window.FF_state.listening);
+      if(hint) hint.classList.toggle('hidden', window.FF_state.listening);
+      if(ledH) ledH.className = 'led ' + (window.FF_state.listening?'live':'idle');
+      if(ledB) ledB.className = 'dot ' + (window.FF_state.listening?'live':'idle');
+
+      // jeśli główny skrypt już załadowany, użyj właściwych funkcji
+      if(window.FF_start && window.FF_stop){
+        window.FF_state.listening ? window.FF_start() : window.FF_stop();
+      }
+    }catch(e){}
+  };
+  window.addEventListener('click', function(ev){
+    var p = document.getElementById('menuPanel');
+    var onBtn = ev.target.closest && ev.target.closest('#menuBtn');
+    if(p && p.style.display==='block' && !p.contains(ev.target) && !onBtn){
+      p.style.display='none';
+    }
+  }, {passive:true});
+</script>
 <style>
-  :root{
-    --bg:#0b0f12; --bg2:#11161b; --panel:#141b22;
-    --text:#e8eef5; --muted:#a6b1bb; --accent:#ff7a1a; --accent2:#ffb97a;
-    --ring: rgba(255,122,26,.25);
-  }
-  *{box-sizing:border-box}
-  html,body{height:100%}
-  body{
-    margin:0; font-family: system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;
-    color:var(--text);
-    background: radial-gradient(1200px 800px at 50% -10%, #182029 0%, #0b0f12 55%) fixed;
-    -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
-  }
-
-  .wrap{max-width:980px; margin:0 auto; padding:24px 18px 90px}
-
-  /* header */
-  header{display:flex; align-items:center; justify-content:space-between; gap:10px}
-  .brand{display:flex; gap:10px; align-items:baseline}
-  .brand h1{margin:0; font-weight:900; letter-spacing:.5px; font-size:34px; line-height:1; color:var(--accent)}
-  .tag{color:var(--muted); font-size:14px}
-  .actions{display:flex; gap:10px}
-  .icon-btn{
-    position:relative; width:52px; height:52px; border-radius:16px; border:1px solid #1e2630;
-    background:linear-gradient(180deg,#192028, #11161b); color:#cfd7df;
-    display:grid; place-items:center; box-shadow: inset 0 0 0 1px #0f1419, 0 6px 18px rgba(0,0,0,.35);
-  }
+  :root{--bg:#0b0f12;--panel:#141b22;--text:#e8eef5;--muted:#a6b1bb;--accent:#ff7a1a}
+  *{box-sizing:border-box} html,body{height:100%}
+  body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;color:var(--text);
+       background:radial-gradient(1200px 800px at 50% -10%,#182029 0%,#0b0f12 55%) fixed}
+  .wrap{max-width:980px;margin:0 auto;padding:24px 18px 90px}
+  header{display:flex;align-items:center;justify-content:space-between;gap:10px}
+  .brand{display:flex;gap:10px;align-items:baseline}
+  .brand h1{margin:0;font-weight:900;letter-spacing:.5px;font-size:34px;color:var(--accent)}
+  .tag{color:var(--muted);font-size:14px}
+  .ver{opacity:.6;font-size:12px;margin-left:6px}
+  .actions{display:flex;gap:10px}
+  .icon-btn{position:relative;width:52px;height:52px;border-radius:16px;border:1px solid #1e2630;
+            background:linear-gradient(180deg,#192028,#11161b);color:#cfd7df;display:grid;place-items:center}
   .icon-btn svg{width:24px;height:24px;pointer-events:none}
-  .badge{position:absolute; top:-8px; right:-8px; min-width:24px; height:24px; padding:0 6px;
-    border-radius:999px; background:var(--accent); color:#111; font-weight:800;
-    display:grid; place-items:center; font-size:13px; box-shadow:0 4px 14px rgba(255,122,26,.35)}
+  .badge{position:absolute;top:-8px;right:-8px;min-width:24px;height:24px;padding:0 6px;border-radius:999px;
+         background:var(--accent);color:#111;font-weight:800;display:grid;place-items:center;font-size:13px}
+  h2{font-size:46px;line-height:1.08;margin:14px 0 6px}
+  .subtitle{color:var(--muted);margin:0 0 18px;font-size:18px}
 
-  h2{font-size:46px; line-height:1.08; margin:14px 0 6px}
-  .subtitle{color:var(--muted); margin:0 0 18px; font-size:18px}
-
-  /* Logo jako przycisk */
-  .logo-wrap{position:relative; display:grid; place-items:center; margin:8px 0 12px}
-  .logo-ring{
-    position:absolute; inset:-8px; border-radius:999px; pointer-events:none;
-    background: radial-gradient(60% 60% at 50% 50%, var(--ring) 0%, transparent 60%);
-    filter: blur(6px); opacity:.7;
-  }
-  #micBtn{
-    appearance:none; border:0; background:transparent; padding:0; margin:0; cursor:pointer;
-    width:min(86vw, 600px); aspect-ratio:1/1; display:grid; place-items:center; border-radius:999px;
-    position:relative; outline:none; touch-action:manipulation; pointer-events:auto;
-    box-shadow:0 0 0 1px rgba(255,255,255,.06), 0 24px 80px rgba(0,0,0,.55);
-    transition:transform .2s ease, filter .2s ease, box-shadow .2s ease;
-    z-index:2;
-  }
-  #micBtn.recording{
-    animation: micPulse 1.4s ease-in-out infinite;
-    box-shadow:0 0 0 1px rgba(255,255,255,.08),
-               0 0 0 12px rgba(255,122,26,.08),
-               0 28px 120px rgba(255,122,26,.35);
-  }
+  .logo-wrap{position:relative;display:grid;place-items:center;margin:8px 0 12px}
+  #micBtn{appearance:none;border:0;background:transparent;padding:0;margin:0;cursor:pointer;
+          width:min(86vw,600px);aspect-ratio:1/1;display:grid;place-items:center;border-radius:999px;
+          position:relative;outline:none;touch-action:manipulation;pointer-events:auto;
+          box-shadow:0 0 0 1px rgba(255,255,255,.06),0 24px 80px rgba(0,0,0,.55);
+          transition:transform .2s ease,filter .2s ease,box-shadow .2s ease}
+  #micBtn.recording{animation:micPulse 1.4s ease-in-out infinite;
+                    box-shadow:0 0 0 1px rgba(255,255,255,.08),0 0 0 12px rgba(255,122,26,.08),
+                               0 28px 120px rgba(255,122,26,.35)}
   @keyframes micPulse{0%,100%{transform:scale(1)}50%{transform:scale(1.02)}}
-  /* obraz i hint nie łapią dotyku – wszystko trafia w button */
-  #micBtn img, #micBtn .hint{pointer-events:none}
-  #micImg{width:100%; height:100%; object-fit:cover; border-radius:999px; display:block}
-
-  /* „Dotknij…” nad logo (znika w nasłuchu) */
-  .hint{
-    position:absolute; bottom:16px; left:50%; transform:translateX(-50%);
-    background: linear-gradient(180deg,#1a2128,#10161c);
-    border:1px solid #26303a; border-radius:16px; padding:10px 14px; color:#cfe3f5;
-    display:flex; align-items:center; gap:10px; box-shadow:0 8px 28px rgba(0,0,0,.35);
-    backdrop-filter: blur(6px);
-  }
+  #micBtn img,#micBtn .hint{pointer-events:none} /* nic nie przechwytuje dotyku */
+  #micImg{width:100%;height:100%;object-fit:cover;border-radius:999px;display:block}
+  .hint{position:absolute;bottom:16px;left:50%;transform:translateX(-50%);
+        background:linear-gradient(180deg,#1a2128,#10161c);
+        border:1px solid #26303a;border-radius:16px;padding:10px 14px;color:#cfe3f5;
+        display:flex;align-items:center;gap:10px;box-shadow:0 8px 28px rgba(0,0,0,.35)}
   .hint.hidden{display:none}
-  .led{width:10px; height:10px; border-radius:999px}
+  .led{width:10px;height:10px;border-radius:999px}
   .led.idle{background:#6b7b88}
-  .led.live{background:#4cff6b; box-shadow:0 0 16px rgba(76,255,107,.65)}
+  .led.live{background:#4cff6b;box-shadow:0 0 16px rgba(76,255,107,.65)}
 
-  /* Transkrypcja pod logo */
-  .transc{
-    margin:12px auto 18px; width:min(86vw,600px);
-    border-radius:18px; background:linear-gradient(180deg,#151b22,#0f1419);
-    border:1px solid #22303a; padding:16px 18px; color:#cfe3f5; min-height:64px;
-    display:flex; gap:12px; align-items:flex-start; line-height:1.45; font-size:18px;
-  }
-  .transc .dot{width:10px; height:10px; border-radius:999px; margin-top:6px}
-  .dot.idle{background:#6b7b88}
-  .dot.live{background:#4cff6b; box-shadow:0 0 14px rgba(76,255,107,.55)}
-  .transc p{margin:0; word-wrap:break-word}
+  .transc{margin:12px auto 18px;width:min(86vw,600px);border-radius:18px;background:linear-gradient(180deg,#151b22,#0f1419);
+          border:1px solid #22303a;padding:16px 18px;color:#cfe3f5;min-height:64px;display:flex;gap:12px;align-items:flex-start;line-height:1.45;font-size:18px}
+  .transc .dot{width:10px;height:10px;border-radius:999px;margin-top:6px}
+  .dot.idle{background:#6b7b88}.dot.live{background:#4cff6b;box-shadow:0 0 14px rgba(76,255,107,.55)}
+  .transc p{margin:0;word-wrap:break-word}
 
-  /* Chips */
-  .chips{display:flex; gap:12px; justify-content:center; flex-wrap:wrap; margin-top:8px}
-  .chip{
-    display:flex; align-items:center; gap:8px; padding:12px 18px; border-radius:18px;
-    border:1px solid #1f2832; background:linear-gradient(180deg,#171e26,#10161c);
-    color:#dbe6f2; box-shadow: inset 0 0 0 1px #0f1419;
-  }
-  .chip.active{border-color:rgba(255,122,26,.6); box-shadow:0 6px 18px rgba(255,122,26,.15)}
-  .chip svg{width:18px; height:18px; color:var(--accent)}
+  .chips{display:flex;gap:12px;justify-content:center;flex-wrap:wrap;margin-top:8px}
+  .chip{display:flex;align-items:center;gap:8px;padding:12px 18px;border-radius:18px;border:1px solid #1f2832;
+        background:linear-gradient(180deg,#171e26,#10161c);color:#dbe6f2}
+  .chip.active{border-color:rgba(255,122,26,.6);box-shadow:0 6px 18px rgba(255,122,26,.15)}
+  .chip svg{width:18px;height:18px;color:var(--accent)}
 
-  /* Menu panel */
-  #menuPanel{
-    display:none; position:fixed; top:72px; right:18px; z-index:9999;
-    width:280px; border-radius:16px; padding:14px;
-    background:linear-gradient(180deg,#1a2128,#11161b); border:1px solid #26303a;
-    box-shadow:0 12px 36px rgba(0,0,0,.5);
-  }
-  #menuPanel a{display:block; padding:10px 8px; color:#dfe8f3; text-decoration:none; border-radius:10px}
+  #menuPanel{display:none;position:fixed;top:72px;right:18px;z-index:9999;width:280px;border-radius:16px;padding:14px;
+             background:linear-gradient(180deg,#1a2128,#11161b);border:1px solid #26303a;box-shadow:0 12px 36px rgba(0,0,0,.5)}
+  #menuPanel a{display:block;padding:10px 8px;color:#dfe8f3;text-decoration:none;border-radius:10px}
   #menuPanel a:hover{background:#0f1419}
 </style>
 </head>
 <body>
   <div class="wrap">
-
     <header>
       <div class="brand">
         <h1>FreeFlow</h1>
-        <div class="tag">Voice to order</div>
+        <div class="tag">Voice to order <span class="ver" id="ver"></span></div>
       </div>
       <div class="actions">
-        <!-- MENU – z fallbackiem inline -->
-        <button id="menuBtn" class="icon-btn" aria-label="Menu" onclick="__toggleMenu(event)">
+        <button id="menuBtn" class="icon-btn" aria-label="Menu"
+                onclick="FF_toggleMenu(event)">
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
             <path d="M4 6h16M4 12h16M4 18h16" stroke-linecap="round"/>
           </svg>
         </button>
-
-        <!-- KOSZYK -->
         <button class="icon-btn" aria-label="Koszyk">
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
             <path d="M6 6h15l-1.5 9h-12zM6 6l-2-2M9 22a1 1 0 1 0 0-2m8 2a1 1 0 1 0 0-2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -149,12 +136,10 @@
     <h2>Złóż zamówienie</h2>
     <p class="subtitle">Taxi, posiłek, a może nocleg?</p>
 
-    <!-- LOGO = PRZYCISK -->
     <div class="logo-wrap">
-      <div class="logo-ring" aria-hidden="true"></div>
       <button id="micBtn" aria-label="Nagraj polecenie"
-              onclick="__toggleMic()" ontouchstart="__toggleMic()">
-        <img id="micImg" src="Freeflow-logo.png" alt="FreeFlow — przycisk mikrofonu" />
+              onclick="FF_toggleMic()" ontouchstart="FF_toggleMic()">
+        <img id="micImg" src="Freeflow-logo.png" alt="FreeFlow — przycisk mikrofonu">
         <div id="micHint" class="hint">
           <span id="ledHint" class="led idle"></span>
           <span>Dotknij, aby zamówić</span>
@@ -162,13 +147,11 @@
       </button>
     </div>
 
-    <!-- TRANSKRYPCJA -->
     <div class="transc" aria-live="polite" aria-atomic="true">
       <span id="ledBar" class="dot idle"></span>
       <p id="transcriptText">Transkrypcja pojawi się tutaj…</p>
     </div>
 
-    <!-- KATEGORIE -->
     <div id="chips" class="chips" role="tablist">
       <button class="chip active" role="tab" aria-selected="true">
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -186,113 +169,65 @@
         </svg> Hotel
       </button>
     </div>
-
   </div>
 
-<!-- ====== SKRYPT ODPORNY NA BŁĘDY + TOUCH ====== -->
 <script>
-(function () {
-  const $ = (sel) => document.querySelector(sel);
+(function(){
+  // wersja na ekranie
+  var v=document.getElementById('ver'); if(v) v.textContent = '('+ (window.FF_VER||'?') +')';
 
-  const menuBtn = $('#menuBtn');
-  const panel   = $('#menuPanel');
-  const micBtn  = $('#micBtn');
-  const micHint = $('#micHint');
-  const ledHint = $('#ledHint');
-  const ledBar  = $('#ledBar');
-  const txEl    = $('#transcriptText');
-  const chips   = $('#chips');
+  // dodatkowe nasłuchy (gdy jest JS)
+  var menuBtn=document.getElementById('menuBtn');
+  if(menuBtn) menuBtn.addEventListener('click', function(e){ e.stopPropagation(); window.FF_toggleMenu(e); }, {passive:false});
+  document.addEventListener('click', function(e){ window.FF_toggleMenu && window.FF_toggleMenu({ stopPropagation:()=>{} }); }, {passive:true});
 
-  /* Fallbacki globalne — działają nawet jeśli addEventListener nie chwyci */
-  window.__toggleMenu = function (ev) {
-    if (ev) ev.stopPropagation();
-    if (!panel) return;
-    panel.style.display = (panel.style.display === 'block') ? 'none' : 'block';
-  };
-  window.__closeMenuIfOutside = function (ev) {
-    if (!panel) return;
-    const onBtn = ev.target.closest && ev.target.closest('#menuBtn');
-    if (panel.style.display === 'block' && !panel.contains(ev.target) && !onBtn) {
-      panel.style.display = 'none';
-    }
-  };
-  window.__toggleMic = function () {
-    if (!window.__listening) startListen(); else stopListen();
-  };
-
-  /* Nasłuchy (bezpieczne) */
-  document.addEventListener('click', window.__closeMenuIfOutside, {passive:true});
-  if (menuBtn) menuBtn.addEventListener('click', (e)=>{ e.stopPropagation(); window.__toggleMenu(e); }, {passive:false});
-
-  if (chips) chips.addEventListener('click', (e)=>{
-    const chip = e.target.closest('.chip'); if (!chip) return;
-    [...chips.querySelectorAll('.chip')].forEach(c=>{ c.classList.remove('active'); c.setAttribute('aria-selected','false'); });
+  // chips
+  var chips=document.getElementById('chips');
+  if(chips) chips.addEventListener('click', function(e){
+    var chip=e.target.closest('.chip'); if(!chip) return;
+    [].forEach.call(chips.querySelectorAll('.chip'), c=>{c.classList.remove('active'); c.setAttribute('aria-selected','false');});
     chip.classList.add('active'); chip.setAttribute('aria-selected','true');
   }, {passive:true});
 
-  if (micBtn){
-    const fire = (e)=>{ e.stopPropagation(); window.__toggleMic(); };
-    micBtn.addEventListener('click', fire, {passive:false});
-    micBtn.addEventListener('touchstart', fire, {passive:false});
-    micBtn.addEventListener('keydown', (e)=>{
-      if (e.key==='Enter' || e.key===' ') { e.preventDefault(); window.__toggleMic(); }
-    }, {passive:false});
+  // Web Speech API
+  const SR = window.SpeechRecognition || window.webkitSpeechRecognition;
+  let rec=null, txEl=document.getElementById('transcriptText');
+
+  if(!SR && txEl){
+    txEl.textContent = 'Użyj Chrome/Edge – brak wsparcia dla rozpoznawania mowy.';
   }
 
-  /* Web Speech (demo) */
-  window.__rec = null;
-  window.__listening = false;
-
-  function makeRecognizer(){
-    const SR = window.SpeechRecognition || window.webkitSpeechRecognition;
-    if (!SR) {
-      if (txEl) txEl.textContent = 'Użyj Chrome/Edge – brak wsparcia dla rozpoznawania mowy.';
-      return null;
-    }
-    const r = new SR();
-    r.lang = 'pl-PL';
-    r.interimResults = true;
-    r.continuous = false;  // jedna wypowiedź
-    r.maxAlternatives = 1;
-    return r;
-  }
-
-  function startListen(){
-    if (window.__listening) return;
-    window.__rec = makeRecognizer(); if (!window.__rec) return;
-
-    window.__listening = true;
-    micBtn && micBtn.classList.add('recording');
-    micHint && micHint.classList.add('hidden');
-    ledHint && (ledHint.className = 'led live');
-    ledBar  && (ledBar.className = 'dot live');
-    txEl && (txEl.textContent = '');
-
-    window.__rec.onresult = (ev)=>{
-      let final='', interim='';
-      for (const res of ev.results) {
-        (res.isFinal ? final : interim) += res[0].transcript + ' ';
-      }
-      if (txEl) {
-        txEl.innerHTML =
-          (final ? '<strong>'+final.trim()+'</strong> ' : '') +
-          (interim ? '<span style="opacity:.7">'+interim.trim()+'</span>' : '');
+  window.FF_start = function(){
+    if(!SR){ return; }
+    rec = new SR();
+    rec.lang='pl-PL'; rec.interimResults=true; rec.continuous=false; rec.maxAlternatives=1;
+    rec.onresult=function(ev){
+      let final='',interim='';
+      for(const res of ev.results){ (res.isFinal?final:interim)+=res[0].transcript+' '; }
+      if(txEl){
+        txEl.innerHTML = (final?'<strong>'+final.trim()+'</strong> ':'') + (interim?'<span style="opacity:.7">'+interim.trim()+'</span>':'');
       }
     };
-    window.__rec.onerror = ()=> stopListen();
-    window.__rec.onend   = ()=> stopListen();
+    rec.onerror=function(){ window.FF_stop(); };
+    rec.onend=function(){ window.FF_stop(); };
+    try{ rec.start(); }catch{ window.FF_stop(); }
+  };
+  window.FF_stop = function(){
+    try{ rec && rec.stop(); }catch{}
+    window.FF_state.listening=false;
+    var btn=document.getElementById('micBtn'), hint=document.getElementById('micHint'), lh=document.getElementById('ledHint'), lb=document.getElementById('ledBar');
+    if(btn) btn.classList.remove('recording');
+    if(hint) hint.classList.remove('hidden');
+    if(lh) lh.className='led idle';
+    if(lb) lb.className='dot idle';
+  };
 
-    try { window.__rec.start(); } catch { stopListen(); }
-  }
-
-  function stopListen(){
-    if (!window.__listening) return;
-    window.__listening = false;
-    try { window.__rec && window.__rec.stop(); } catch {}
-    micBtn && micBtn.classList.remove('recording');
-    micHint && micHint.classList.remove('hidden');
-    ledHint && (ledHint.className = 'led idle');
-    ledBar  && (ledBar.className = 'dot idle');
+  // dodatkowy fallback touch
+  var micBtn=document.getElementById('micBtn');
+  if(micBtn){
+    const fire=function(e){ e.stopPropagation(); window.FF_toggleMic(); };
+    micBtn.addEventListener('click', fire, {passive:false});
+    micBtn.addEventListener('touchstart', fire, {passive:false});
   }
 })();
 </script>
